# aoc

2023/: Cargo.toml  day11.bench.txt
2023/day-02/: Cargo.toml
2023/day-03/: Cargo.toml
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-05/src/: lib.rs
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-07/src/: lib.rs
2023/day-08/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-10/src/: lib.rs
2023/day-11/: Cargo.toml
2023/day-11/benches/: benchmarks.rs
2023/day-11/src/: lib.rs  part1.rs  part2.rs
2024/aoc_ex/: mix.exs
2024/aoc_ex/lib/: elixir_aoc.ex  gridwalker.ex
2024/aoc_ex/lib/day_01/: day_01.ex
2024/aoc_ex/lib/day_02/: day_02.ex
2024/aoc_ex/lib/day_04/: day_04.ex
2024/aoc_ex/lib/day_template/: day_00.ex
2024/aoc_ex/lib/file_reader/: file_reader.ex
2024/aoc_ex/test/: elixir_aoc_test.exs
2024/aoc_ex/test/day_01/: day_01_test.exs
2024/aoc_ex/test/day_02/: day_02_test.exs
2024/aoc_ex/test/day_04/: day_04_test.exs
2024/aoc_ex/test/day_template/: day_00_test.exs
2024/aoc_exs/: mix.exs
2024/aoc_exs/test/: elixir_aoc_test.exs
2024/aoc_gl/: README.md  gleam.toml
2024/aoc_gl/src/: aoc_gl.gleam
2024/aoc_rs/day-01/src/: part1.rs
2024/aoc_rs/day-02/src/: part1.rs  part2.rs
2024/aoc_rs/day-03/src/: part1.rs  part2.rs
2024/aoc_rs/day-05/src/: part1.rs  part2.rs
2024/aoc_rs/day-06/: Cargo.toml
2024/aoc_rs/day-08/: Cargo.toml
2024/rust/: justfile
2024/rust/day01/: Cargo.toml
2025/aoc_rs/: Cargo.toml
2025/aoc_rs/day-05/: Cargo.toml
day-01/: input1t.txt
(+21 files in other folders)
