[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-tracy = "0.10.4"
